--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/public/mf.ico" />
-    <link rel="apple-touch-icon" href="/public/mf.ico" />
+    <link rel="icon" type="image/x-icon" href="/MF.ico" />
+    <link rel="apple-touch-icon" href="/MF.ico" />
     <title>Tutor Sessions</title>
     <meta name="description" content="Tutor Sessions - Manage your tutoring sessions" />
     <meta name="author" content="Lovable" />
